--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.2",
+    "@rails/actiontext": "^7.1.3-2",
     "@rails/ujs": "^7.1.3-2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
@@ -31,7 +32,8 @@
     "stimulus-textarea-autogrow": "^4.1.0",
     "sweetalert2": "^11.10.5",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "trix": "^2.0.10"
   },
   "scripts": {
     "build": "node esbuild.config.js",
