--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debounce": "^2.0.0",
     "esbuild": "0.16.17",
     "esbuild-plugin-sass": "^1.0.1",
+    "glightbox": "^3.2.0",
     "http": "^0.0.1-security",
     "i18n-js": "^4.4.3",
     "nouislider": "^15.7.1",
@@ -24,7 +25,6 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.0.1",
     "postcss-nested": "^6.0.1",
-    "stimulus-carousel": "^5.0.1",
     "stimulus-clipboard": "^4.0.1",
     "stimulus-dropdown": "^2.1.0",
     "stimulus-notification": "^2.2.0",
@@ -33,7 +33,6 @@
     "stimulus-rails-nested-form": "^4.1.0",
     "stimulus-textarea-autogrow": "^4.1.0",
     "sweetalert2": "^11.10.5",
-    "swiper": "^11.0.7",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "trix": "^2.0.10"
