Add available until (datetime picker flatpickr) on forms and in the view also control of this date to show (this form is not available page). Fixed stiles on profiles to show correctly. Fix date format on all the platform (UTC in database TIMEZONE for show users). Also fix some stiles of other parts of the platform. And complete some parts of the landing page with translations and new platform captures.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debounce": "^2.0.0",
     "esbuild": "0.16.17",
     "esbuild-plugin-sass": "^1.0.1",
+    "flatpickr": "^4.6.13",
     "glightbox": "^3.3.0",
     "http": "^0.0.1-security",
     "i18n-js": "^4.4.3",
